# product-finder

./: .gitignore  Dockerfile  README.md  __init__.py  conftest.py  deploy.sh  docker-compose.yml  finder.py  production.sh  provision.sh  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: audit.yaml  build_and_deploy.yaml  test.yaml
application/: __init__.py  app.py  views.py
application/templates/: calculations.html  categories.html  category.html  index.html  item.html  items.html
broker/: __init__.py
cache/: __init__.py
calculator/: __init__.py  calculator.py
database/: __init__.py  alembic.ini  category.py  db.py  item.py
database/alembic/: env.py
database/alembic/versions/: 1b284f077aac_add_hidden_column_to_item_and_category_.py  8f75df52ed9c_add_title_version_to_category.py
item_processor/: calculator.py
poetry/: __init__.py  scripts.py
production/: deploy.sh  docker-compose.production.yml  provision.sh
production/certbot/: Dockerfile
production/nginx/: Dockerfile  nginx.conf
scraper/: README.md  __init__.py  _types.py  main.py  scrape.py
scraper/core/: __init__.py  aliexpress.py  amazon.py  category.py  drivers.py  item.py  test.sqlite
scraper/core/utils/: database.py  language_utils.py
scraper/sites/: aliexpress.py  amazon.py  shopify.py
scraper/sites/amazon/: category.py  fees.py  item.py
server/: readme.md
tasks/: __init__.py
terraform/: main.tf  terraform.tfvars  variables.tf
terraform/modules/digitalocean_droplet/: main.tf  output.tf
terraform/modules/digitalocean_firewall/: main.tf
terraform/modules/digitalocean_ssh_keys/: main.tf  output.tf
terraform/modules/droplet/: main.tf  output.tf
terraform/modules/firewall/: main.tf
terraform/modules/ssh_key/: main.tf  output.tf
tests/calculator/: test_calculator.py
tests/integration/scraper/: test_aliexpress.py  test_shopify.py
tests/integration/scraper/amazon/: test_category.py  test_fees.py
tests/scraper/amazon/: test_category.py  test_fees.py
tests/unit/utils/: test_mappings.py
tests/utils/: test_unit_conversion.py
utils/: __init__.py  language_utils.py  mappings.py  nltk.py  system.py  unit_conversions.py
utils/mappings/: category_mappings.yaml
