[tool.poetry]
name = "finder"
version = "0.1.0"
description = "Library to help find potentially profitable products"
authors = ["Jack Rothrock <jrothrock14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.7"
celery = "^5.2"
Flask = "^2.0"
gunicorn = "^20.1"
nltk = "^3.6"
PyYAML = "^6.0"
redis = "^3.5"
selenium = "^3.141"
SQLAlchemy = "^1.4"
webdriver-manager = "^3.5"
psycopg2 = "^2.9.3"
SQLAlchemy-Utils = "^0.38.2"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^4.0"
pydocstyle = "^6.1"
pytest = "^6.2"
toml = "^0.10"
isort = "^5.10.1"
pytest-env = "^0.6.2"
mypy = "^0.950"

[tool.black]
exclude = ".venv"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_site_packages = true
explicit_package_bases = true
namespace_packages = true
exclude = [
  "application/*"
]

[tool.isort]
profile = "black"
skip_glob = [".venv/*"]
quiet = true
force_single_line = true

[tool.pydocstyle]
match-dir='[^\.venv].*'

[tool.poetry.scripts]
audit = "poetry.scripts:audit"
start = "poetry.scripts:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
